--- a/.gitignore
+++ b/.gitignore
@@ -102,11 +102,12 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-
-data/
-__init__.py
-
-experiments/
-via/
-# for Geoff, vscode
-.vscode/
+.project
+.pydevproject
+.env
+data/raw
+data/pathways_datasets/*/*.npy
+data/pathways_datasets/*/*.log
+data/pathways_datasets/*/course_indices.json
+experiments/*/*/*.log
+experiments/*/*/*.txt
